--- a/src/app/employee-edit-modal/employee-edit-modal.component.html
+++ b/src/app/employee-edit-modal/employee-edit-modal.component.html
@@ -3,23 +3,23 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Novo empregado</h5>
+                    <h5 class="modal-title">Editar empregado {{employee?.name}}</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="hide()">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" *ngIf="employee">
                     <div class="form-group">
                         <label>Nome</label>
-                        <input class="form-control" name="name" type="text" [(ngModel)]="employee.name" />
-                   </div>
+                        <input class="form-control" name="name" type="text" [(ngModel)]="employee.name">
+                    </div>
                     <div class="form-group">
                         <label>Salario</label>
-                        <input class="form-control" name="salary" type="text" [(ngModel)]="employee.salary" />
+                        <input class="form-control" name="salary" type="text" [(ngModel)]="employee.salary">
                     </div>
                     <div class="form-group" [hidden]="employee.salary >= 1000">
                         <label>Bonus</label>
-                        <input class="form-control" name="bonus" type="text" [(ngModel)]="employee.bonus" />
+                        <input class="form-control" name="bonus" type="text" [(ngModel)]="employee.bonus">
                     </div>
                 </div>
                 <div class="modal-footer">
